# CrossBridge

./: .gitignore  README.md  package-lock.json  package.json  window_dump.xml
.antigravitycli/: 5f9462ef-a16f-4b00-a248-97ff5886d216.json
.playwright-cli/: page-2026-05-20T14-32-23-029Z.yml  page-2026-05-20T14-33-01-684Z.yml  page-2026-05-20T14-33-20-945Z.yml  page-2026-05-20T14-37-20-267Z.yml  page-2026-05-20T14-39-42-514Z.yml  page-2026-05-20T14-42-22-998Z.yml  page-2026-05-20T14-43-56-505Z.yml  page-2026-05-20T23-51-54-489Z.yml  page-2026-05-20T23-52-21-285Z.yml  page-2026-05-20T23-54-25-813Z.yml  page-2026-05-20T23-55-56-584Z.yml  page-2026-05-20T23-56-23-977Z.yml  page-2026-05-20T23-56-56-696Z.yml  page-2026-05-20T23-57-28-380Z.yml  page-2026-05-20T23-59-52-679Z.yml  page-2026-05-21T00-00-45-863Z.yml  page-2026-05-21T00-07-58-798Z.yml  page-2026-05-21T00-10-10-053Z.yml  page-2026-05-21T00-10-24-760Z.yml  page-2026-05-24T12-45-53-948Z.yml
apps/windows/src-tauri/: Cargo.toml  tauri.conf.json
apps/windows/src-tauri/capabilities/: default.json
apps/windows/src-tauri/src/: lib.rs  main.rs
docs/: android-pairing.md  architecture.md  hosted-relay-deployment-checklist.md  hosted-relay.md  pairing.md  release-readiness.md  security.md  windows-packaging.vsconfig
scratch/: android_identity.json  crossbridge_trusted_devices.xml  mock-windows-online.ts  mock-windows-pair.ts  search-code.ts  setup-mock-keys.ts  test-key-derivation.ts  type-qr.js  verify-tray-behavior.ps1  verify-tray-no-addtype.ps1  windows_keys.json
scripts/: check-prereqs.mjs  e2e-verify.ts  (+5 more)
(+130 files in other folders)
