[package]
name = "crossbridge-windows"
version = "0.1.0"
edition = "2021"

[lib]
name = "crossbridge_windows_lib"
crate-type = ["rlib"]

[[bin]]
name = "crossbridge-windows"
path = "src/main.rs"
test = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security_Cryptography", "Win32_System_Memory"] }
